@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 -------------------------------------------------
 
+- Added classgroup CGI parameter support (#4207)
+
 - Java mapscript: renamed shared library and completed libtool support (#2595)
 
 - Fixed WCS 2.0 axis order (#4191)
